--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "medina-lp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -9,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-select": "^2.1.7",
     "@trigger.dev/sdk": "^3.3.17",
@@ -16,6 +18,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.6.3",
+    "gh-pages": "^6.3.0",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "radix-ui": "^1.2.0",
